--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,8 +35,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
-    <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://pbtodo-api.bua.workers.dev; frame-ancestors 'none'; base-uri 'self'; form-action 'self';" />
+    <!-- Content Security Policy will be injected dynamically by securityHeaders.ts -->
 
     <!-- Other security headers -->
     <meta http-equiv="X-Frame-Options" content="DENY" />
